update backend - add pre-commit checks - add ruff rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,17 +3,20 @@ name = "py-ts-exploration-template"
 version = "0.1.0"
 classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.115.12",
+]
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.2.0",
     "ruff>=0.11.9",
 ]
 
 [tool.uv]
 required-version = "0.7.3"
 
-[tool.ruff]
+[tool.ruff.lint]
 extend-select = [
     # pycodestyle errors: https://docs.astral.sh/ruff/rules/#error-e
     # catches violations of style conventions (pep8)
@@ -84,6 +87,8 @@ extend-select = [
     # https://docs.astral.sh/ruff/rules/invalid-pyproject-toml/
     # Prevent invalid pyproject.toml
     "RUF200",
+    # https://docs.astral.sh/ruff/rules/#isort-i
+    "I",
 ]
 ignore = [
     # https://docs.astral.sh/ruff/rules/multiple-starts-ends-with/
