--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
   "name": "py-ts-exploration-template",
+  "private": true,
   "version": "0.1.0",
-  "private": true
+  "type": "module",
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.4.1",
+    "oxlint": "^0.16.10",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
+  },
+  "scripts": {
+    "dev": "vite",
+    "typecheck": "tsc -b"
+  }
 }
