--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "py-ts-exploration-template"
 version = "0.1.0"
 classifiers = ["Private :: Do Not Upload"]
-requires-python = ">=3.13"
+requires-python = ">=3.13, <3.14"
 dependencies = [
     "fastapi[standard]>=0.115.12",
 ]
