Enforce pnpm version

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "pnpm": "10.10.0"
+  },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
