--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dev = [
 [tool.uv]
 required-version = "0.7.3"
 
+[tool.ruff]
+src = ["backend"]
+
 [tool.ruff.lint]
 extend-select = [
     # pycodestyle errors: https://docs.astral.sh/ruff/rules/#error-e
