--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,6 @@ repos:
   - id: github-actions-lint
     name: github-actions-lint
     language: system
-    entry: uv run zizmor --min-severity=high .github
-    files: ^(\.github/workflows/.*.ya?ml|\.github/actions/.*.ya?ml)$
+    entry: uv run zizmor --min-severity=high --no-progress .github
+    files: (\.github/workflows/.*)|(action\.ya?ml)$
     pass_filenames: false
