--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pre-commit>=4.2.0",
+    "pytest>=8.3.5",
+    "pytest-xdist>=3.6.1",
     "ruff>=0.11.9",
     "zizmor>=1.7.0",
 ]
