--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ classifiers = ["Private :: Do Not Upload"]
 requires-python = ">=3.13, <3.14"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "pydantic-settings>=2.9.1",
 ]
 
 [dependency-groups]
