--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: "CI"
 on:
   push:
     branches:
-      - main
+    - main
   pull_request:
 
 jobs:
@@ -12,29 +12,48 @@ jobs:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: ./.github/actions/python-deps
     - run: uv lock --check
-  lint-format-python:
+  lint-python:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: ./.github/actions/python-deps
     - run: uv run ruff check
-    - run: uv run ruff format --check
-  typecheck-ts:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-    - uses: ./.github/actions/ts-deps
-    - run: pnpm typecheck
-  lint-format-ts:
+  lint-ts:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: ./.github/actions/ts-deps
     - run: pnpm oxlint
-    - run: pnpm biome check
   lint-github-actions:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: ./.github/actions/python-deps
     - run: uv run zizmor --min-severity=high --no-progress .github
+
+  format-python:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: ./.github/actions/python-deps
+    - run: uv run ruff check --select I --fix
+    - run: uv run ruff format --check
+  format-ts:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: ./.github/actions/ts-deps
+    - run: pnpm dprint check '**/*.{ts,tsx}'
+  format-other:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: ./.github/actions/ts-deps
+    - run: pnpm dprint check --exclude '**/*.{ts,tsx}'
+
+  typecheck-ts:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: ./.github/actions/ts-deps
+    - run: pnpm typecheck
