--- a/biome.jsonc
+++ b/biome.jsonc
@@ -3,23 +3,23 @@
   "vcs": {
     "enabled": true,
     "clientKind": "git",
-    "useIgnoreFile": true
+    "useIgnoreFile": true,
   },
   "linter": {
     // Use oxlint for linting instead.
-    "enabled": false
+    "enabled": false,
   },
   "formatter": {
     "enabled": true,
-    "useEditorconfig": true
+    "useEditorconfig": true,
   },
   "organizeImports": {
-    "enabled": true
+    "enabled": true,
   },
   "json": {
     "parser": {
       "allowComments": true,
-      "allowTrailingCommas": true
-    }
-  }
+      "allowTrailingCommas": true,
+    },
+  },
 }
