--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["editorconfig.editorconfig", "charliermarsh.ruff"]
+  "recommendations": ["editorconfig.editorconfig", "charliermarsh.ruff", "dprint.dprint"]
 }
