--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: ./.github/actions/ts-deps
-    - run: pnpm dprint check --exclude '**/*.{ts,tsx}'
+    - run: pnpm dprint check --excludes '**/*.{ts,tsx}'
 
   typecheck-ts:
     runs-on: ubuntu-latest
