--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "^3.1.3",
     "dprint": "^0.49.1",
     "happy-dom": "^17.4.7",
     "oxlint": "^0.16.10",
+    "playwright": "^1.52.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "vitest-browser-react": "^0.2.0"
   },
   "scripts": {
     "dev": "vite",
